--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5.1.3",
+        "cross-env": "^7.0.3",
+        "laravel-mix": "^6.0.44",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.14",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
     }
 }
